# transparencyScraper

./: README.md
desafio_01/: ActivePieces.json  Dockerfile  ExampleCall.md  ExampleRequests.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  render.yaml  start.sh
desafio_01/gov_scraper/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
desafio_01/transparency_scraper/: apps.py  serializers.py  tasks.py  urls.py  views.py
